# wasabi-archive

./: .dockerignore  .gitignore  .gitmodules  .travis.yml  Cargo.toml  Dockerfile  LICENSE  build-push-wasabi-docker-image.sh  docker-compose.yml  fnmut.wat  go-lib-runtime-test.sh  go-net-test-req.sh  go-net-test.sh  go-test-all.sh  go.mod  hmmmmm.md  main.go  main_test.go  notes.md  old_resolver.go  readme.md  rust-runtime-test.sh  superstellar.sh  test-all.sh
.circleci/: config.yml
cmd/: .dockerignore
cmd/circleci-runner/: Dockerfile
cmd/example-server/: lib.js  main.go  wasm_exec.js
cmd/go-fs/: Dockerfile  main.go
cmd/go-print/: Dockerfile  main.go
cmd/go-server/: Dockerfile  main.go
cmd/go-wasm-lib/: Dockerfile  main.go
cmd/life-runtime/: main.go  resolver.go
cmd/node-server/: Dockerfile  lib.js  main.go  package-lock.json  package.json  wasm_exec.js
cmd/runtime/: Dockerfile  foo.wat  main.go  resolver.go  runtime
cmd/rust-basic/: Cargo.toml  Dockerfile
cmd/rust-basic/.cargo/: config
cmd/rust-basic/src/: lib.rs
cmd/switch-bug-test-case/: Dockerfile  main.go  node.Dockerfile
cmd/wasmtime/: Cargo.toml  Dockerfile
cmd/wasmtime/src/: instance_plus_plus.rs  main.rs  resolver.rs
go/: Dockerfile
go/net/: lookup_fake.go  lookup_fake.s  net_js.go
go/net/http/: roundtrip_js.go
go/runtime/: sys_wasm.s
go/syscall/: asm_js.s  net_js.go  net_js.s  syscall_js.go  time_js.s
go/syscall/wasm/: wasm.go  wasm_js.s
gowasm/: Dockerfile  gowasm.go  gowasm.s  gowasm_js.go  gowasm_test.go
gowasm/http/: http.go  http_test.go  roundtrip.go  roundtrip_js.go  roundtrip_js.s
infra/: create-docker-machine.sh  ssh.sh
infra/wasabi-run/: docker_machine.tf  format.sh  lb.tf  main.tf  vpc.tf
internal/net/: http_test.go  net.go  net_test.go  resolving.go  resolving_js.go  resolving_js.s  roundtrip.go  sock.go  sock_js.go  sock_js.s  test.sh
internal/wasm/: wasm.go  wasm_js.s
lib/exec/: main.go
lib/handler/: assemble.go  assemble_test.go  handler.go  handler_wasm.go  readme.md
lib/handler-user/: main.go
lib/hello/: Cargo.toml  build.sh  hello.wat
lib/hello/src/: main.rs
lib/tinygo/: main.go
pkg/: main.go
pkg/go/: Dockerfile
pkg/go/crypto/rand/: rand_js.go
pkg/go/net/: fd_unix.go  lookup_fake.go  net_js.go
pkg/go/net/http/: roundtrip.go
pkg/go/runtime/: runtime.go
pkg/go/syscall/: fd_js.go  fs_js.go  net_js.go  zsyscall_js.go
pkg/gowasm/: Dockerfile  gowasm.go  gowasm_test.go  main.go  main.s
pkg/net/: listener.go  listener_js.go  listener_js.s  resolving_js.go  roundtrip.go  roundtrip_js.go  sock.go  sock_js.go  sock_js.s
pkg/wasm/: wasm_js.go
pkg/wasmhttp/: main.go
pkg/wasmjshttp/: main.go
programs/: .dockerignore  go-test-wasabi.sh
programs/circleci-runner/: Dockerfile
programs/demo/: .dockerignore  Dockerfile  deploy.sh  docker-compose.yml  main.go
programs/go-fs/: Dockerfile  main.go  run.sh
programs/go-https/: main.go  run.sh
programs/go-lib-only/: go_js_wasm_exec_1.11  go_js_wasm_exec_1.12  main.go  run.sh  wasm_exec_1.11.js  wasm_exec_1.12.js
programs/go-net/: Dockerfile  main.go  run.sh
programs/go-net-example/: main.go  run.sh
programs/go-net-test/: main.go  run.sh
programs/go-print/: Dockerfile
programs/go-sleep/: main.go  run.sh
programs/go-websocket/: main.go  run.sh
programs/mem-load-bench/: Dockerfile  clip  docker-compose.yml  main_test.go  wget-log
programs/rust-basic/: Cargo.toml  Dockerfile  run.sh
programs/rust-basic/src/: lib.rs
programs/ts-asm/: package-lock.json
runtime/: Cargo.toml  Dockerfile
runtime/src/: instance_plus_plus.rs  main.rs  resolver.rs
wasabi/: Cargo.toml  Dockerfile  test-wat.sh  test.wat
wasabi-function/: Cargo.toml  build.sh
wasabi-function/src/: lib.rs  main.rs
wasabi-handler/: Cargo.toml
wasabi-handler/src/: lib.rs  main.rs
wasabi-io/: Cargo.toml
wasabi-io/src/: lib.rs
wasabi-wasmtime/: Cargo.toml  ci.Dockerfile  tokio.md
wasabi-wasmtime/src/: go.rs  main.rs  mem.rs  rust.rs  shared_state.rs
wasabi/src/: bytes.rs  go.rs  js.rs  lib.rs  main.rs  mem.rs  network.rs  pool.rs  shared_state.rs  timeout_heap.rs  util.rs
