[package]
name = "runtime"
version = "0.1.0"
authors = ["maxmcd <m@xmcd.me>"]

[dependencies]
cranelift-codegen = "0.26.0"
cranelift-native = "0.26.0"
cranelift-entity = "0.26.0"
cranelift-wasm = "0.26.0"
wasmtime-environ = { git = "https://github.com/CraneStation/wasmtime" }
wasmtime-runtime = { git = "https://github.com/CraneStation/wasmtime" }
wasmtime-execute = { git = "https://github.com/CraneStation/wasmtime" }
wasmtime-obj = { git = "https://github.com/CraneStation/wasmtime" }
wasmtime-wast = { git = "https://github.com/CraneStation/wasmtime" }
docopt = "1.0.1"
serde = "1.0.75"
serde_derive = "1.0.75"
faerie = "0.6.0"
target-lexicon = { version = "0.2.0", default-features = false }
pretty_env_logger = "0.3.0"
file-per-thread-logger = "0.1.1"
wabt = "0.7"
rand = "0.6.1"


