[package]
name = "wasabi"
version = "0.0.1"
authors = ["maxmcd <m@xmcd.me>"]

[dependencies]
cranelift-codegen = "0.28.0"
cranelift-entity = "0.28.0"
cranelift-native = "0.28.0"
cranelift-wasm = "0.28.0"
file-per-thread-logger = "0.1.1"
mio = "0.6"
slab = "0.4.2"
rand = "0.6.1"
target-lexicon = { version = "0.2.0", default-features = false }
failure = "0.1.5"
wabt = "0.7"
wasmtime-environ = { git = "https://github.com/maxmcd/wasmtime", branch = "parallelize-rayon"}
wasmtime-jit = { git = "https://github.com/maxmcd/wasmtime", branch = "parallelize-rayon"}
wasmtime-obj = { git = "https://github.com/maxmcd/wasmtime", branch = "parallelize-rayon"}
wasmtime-runtime = { git = "https://github.com/maxmcd/wasmtime", branch = "parallelize-rayon"}
