[package]
name = "wasmtime"
version = "0.1.0"
authors = ["maxmcd <max.t.mcdonnell@gmail.com>"]

[dependencies]
cranelift-codegen = "0.26.0"
cranelift-native = "0.26.0"
cranelift-entity = "0.26.0"
cranelift-wasm = "0.26.0"
wasmtime-environ = { path = "../../../../CraneStation/wasmtime/lib/environ" }
wasmtime-runtime = { path = "../../../../CraneStation/wasmtime/lib/runtime" }
wasmtime-execute = { path = "../../../../CraneStation/wasmtime/lib/execute" }
wasmtime-obj = { path = "../../../../CraneStation/wasmtime/lib/obj" }
wasmtime-wast = { path = "../../../../CraneStation/wasmtime/lib/wast" }
docopt = "1.0.1"
serde = "1.0.75"
serde_derive = "1.0.75"
faerie = "0.6.0"
target-lexicon = { version = "0.2.0", default-features = false }
pretty_env_logger = "0.3.0"
file-per-thread-logger = "0.1.1"
wabt = "0.7"
